# prayers_cli

./: Cargo.toml
src/: args.rs  init.rs  main.rs  prayer_utils.rs  settings.rs
