[package]
name = "prayers_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["json"]}
salah = "0.7.0"
tokio = {version="1.28.1", features=["full"]}
serde_json = "1.0.96"
clap = { version="4.2.7", features=["derive"] } 
chrono = "0.4.24"
